# experiments-loop-functions

loop-functions/: CMakeLists.txt
loop-functions/AutoMoDe-Modules/: AntiPhototaxisLoopFunc.cpp  AntiPhototaxisLoopFunc.h  AttractionLoopFunc.cpp  AttractionLoopFunc.h  ExplorationLoopFunc.cpp  ExplorationLoopFunc.h  PhototaxisLoopFunc.cpp  PhototaxisLoopFunc.h  RepulsionLoopFunc.cpp  RepulsionLoopFunc.h  StopLoopFunc.cpp  StopLoopFunc.h
loop-functions/NEATvsEvo/: CMakeLists.txt  SCAhalfLoopFunc.cpp  SCAhalfLoopFunc.h
loop-functions/Repertoire/: CMakeLists.txt  GenericLoopFunc.cpp  GenericLoopFunc.h  QualityMetricCollision.cpp  QualityMetricCollision.h  RepertoireTrainingLoopFunc.cpp  RepertoireTrainingLoopFunc.h  SDBCLoopFunc.cpp  SDBCLoopFunc.h
loop-functions/Repertoire/Objects/: Box.cpp  Box.h
loop-functions/baby-arena/: BabyForagingTwoSpotsLoopFunc.cpp  BabyForagingTwoSpotsLoopFunc.h  BabyGridExplorationLoopFunc.cpp  BabyGridExplorationLoopFunc.h  CMakeLists.txt  ChocolateBabyAACLoopFunc.cpp  ChocolateBabyAACLoopFunc.h
loop-functions/behaviortrees/: CMakeLists.txt  MarkerAggregationLoopFunc.cpp  MarkerAggregationLoopFunc.h  NAggregationLoopFunc.cpp  NAggregationLoopFunc.h
loop-functions/chocolate/AAC/: ChocolateAACLoopFunc.cpp
loop-functions/chocolate/CFA/: ChocolateCFALoopFunc.cpp
loop-functions/chocolate/SCA/: CMakeLists.txt  ChocolateSCALogLoopFunc.cpp  ChocolateSCALogLoopFunc.h  ChocolateSCALoopFunc.cpp
loop-functions/complexity/: AggregationSingleSpot.cpp  AggregationSingleSpot.h  AggregationTwoSpots5050.cpp  AggregationTwoSpots5050.h  AggregationTwoSpotsXOR.cpp  AggregationTwoSpotsXOR.h  CMakeLists.txt
loop-functions/localsearch/: CMakeLists.txt  GuidedShelterLogLoopFunc.cpp  GuidedShelterLogLoopFunc.h
loop-functions/mate/: CMakeLists.txt
loop-functions/mate/APC/: CMakeLists.txt  MateAPCLoopFunc.cpp  MateAPCLoopFunc.h
loop-functions/mate/CC/: CMakeLists.txt  MateCCLoopFunc.cpp  MateCCLoopFunc.h
loop-functions/mate/NC/: CMakeLists.txt  MateNCLoopFunc.cpp  MateNCLoopFunc.h
loop-functions/moca/: TuttiAgLoopFunc.cpp  TuttiAgLoopFunc.h  TuttiFrLoopFunc.cpp  TuttiFrLoopFunc.h  TuttiStLoopFunc.cpp  TuttiStLoopFunc.h
loop-functions/orchestra/: AAC.cpp  AAC.h  AggregationAmbientCues.cpp  AggregationAmbientCues.h  CFA.cpp  CFA.h  CMakeLists.txt  Foraging.cpp  Foraging.h  Homing.cpp  Homing.h  SCA.cpp  SCA.h
loop-functions/vanilla/: AggregationTwoSpotsLogLoopFunc.cpp  AggregationTwoSpotsLogLoopFunc.h  AggregationTwoSpotsLoopFunc.cpp  CMakeLists.txt  ForagingTwoSpotsLogLoopFunc.cpp  ForagingTwoSpotsLogLoopFunc.h
loop-functions/visual-add-ons/: epuck_planning_user_functions.cpp  epuck_planning_user_functions.h
missionConfigs/: normalization.argos  repertoireTraining.argos  repertoireTrainingVisu.argos
scenarios/behaviortrees/: marker_aggregation_bt.argos  marker_aggregation_bt_visu.argos  n-aggregation_bt.argos  n-aggregation_bt_visu.argos
scenarios/moca/: evoAggregation.argos  evoForaging.argos  evoStop.argos  tuttiAggregation.argos  tuttiForaging.argos  tuttiStop.argos
src/: CoreLoopFunctions.cpp  CoreLoopFunctions.h
